--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
- Theme Name:   Understrap Child
+ Theme Name:   Safe Cycling
  Theme URI:    https://understrap.com
- Description:  Understrap Child Theme
- Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
+ Description:  SAfe Cycling Hub child theme based on Understrap
+ Author:       Fraser Wilkinson
+ Author URI:   https://truweb.com.au
  Template:     understrap
  Version:      1.2.0
  License: GNU General Public License v2 or later
